# jupyter-locuszoom

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  jupyter_locuszoom.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
jupyter_locuszoom/: __init__.py  _frontend.py  _version.py  example.py  locus_zoom.py
jupyter_locuszoom/nbextension/: extension.js
jupyter_locuszoom/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.ts  index.ts  locuszoom.d.ts  plugin.ts  utils.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts
